package com.diguage.didp.abstractfactory;

/**
 * AbstractFactory 类
 *
 * @author D瓜哥，http://www.diguage.com/
 * @since 2017-05-19 17:53:33
 */
public abstract class AbstractFactory {
  public abstract AbstractProductA createProductA();
  public abstract AbstractProductB createProductB();
}
